# Docker

Dev-container/simple/: Dockerfile
helloworld/: Dockerfile  pyproject.toml
