[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["ASK-Baloch <balochsaeed888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
